# malt-language

./: Cargo.toml  a.out  run.sh
docs/: code.ebnf
example/: fib.mlt  main.mlt
lib/: malloc.wat
src/: compiler.rs  main.rs
src/compiler/: syntax_tree.rs  token.rs  token_converter.rs  token_kind.rs  token_kind_converter.rs  tokens.rs
src/compiler/syntax_tree/: binary_operator.rs  error.rs  generate_wasm.rs  llvm.rs  llvm_generator.rs  local_value.rs  syntax_tree.rs  syntax_tree_node.rs  unary_operator.rs
src/compiler/syntax_tree/generate_wasm/: error.rs  generate_wasm.rs
src/compiler/syntax_tree/llvm_generator/: error.rs  expression.rs  llvm_generator.rs  scope.rs  typ.rs
src/compiler/tokens/: error.rs  token.rs  token_converter.rs  token_kind.rs
